--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "jasmine-core": "^2.5.2",
     "karma-chrome-launcher": "^0.1.12",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.8"
+    "karma": "1.5.0",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "1.0.4"
   }
 }
